--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@700&display=swap" rel="stylesheet">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css'><link rel="stylesheet" href="./style.css">
-<link href="styles.css" rel="stylesheet">
-</head>
+<link href="css/styles.css" rel="stylesheet"></head>
 <body>
   <header>
     <nav>
