--- a/Contact us.html
+++ b/Contact us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gulp Roast Coffee | About Us</title>
+    <title>Gulp Roast Coffee | Contact Us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@700&display=swap" rel="stylesheet">
@@ -24,17 +24,14 @@
   <div class="main-bkgd">
     <section class="main">
       <article>
-        <h1>About Us</h1>
-        <p>Life without coffee is a gloomy place. That’s why Gulp Roast has been proudly serving up fresh coffee to the <a href="https://goo.gl/maps/3rAyszfwSDx8Si2Y9" target="_blank">San Francisco area</a> since 2000. Our coffee is locally sourced with the most delicious blends coming directly to your home, right from coffee farmers near you. Our coffee makes even the most difficult days just a tad easier to get through.</p>
-  
-        <p>For us, this isn’t just brewing coffee. This is an active life mission to bring our customers the most flavorful, full-bodied beverages we can get our hands on. Browse our site to learn more about our locations and sourcing techniques.</p>
-  
-        <a class="button" href="https://uxuicurriculum.wixsite.com/gulproast">Contact Us</a>
+        <h1>Contact us</h1>
+        <p>200 Fisherman's Dock
+          <p>San Francisco, CA 94158</p>
+          <a href=“tel:123-456-7890”>123-456-7890</a>
       </article>
+
       <figure>
-        <img src="./media/gulp-pouring-coffee-vertical.jpg" class="tablet" alt="Making pour-over coffee at our shop." />
-        <img src="./media/gulp-pouring-coffee-horizontal.jpg" class="desktop" alt="Making pour-over coffee at our shop." />
-        <img src="./media/gulp-pouring-coffee-horizontal-sm.jpg" class="mobile" alt="Making pour-over coffee at our shop." />
+        <img src="./media/gulp-menu.jpg" class="menu" alt="Making pour-over coffee at our shop." />
         
       </figure>
     </section>
