--- a/products.html
+++ b/products.html
@@ -15,9 +15,9 @@
     <nav>
       <ul>
         <li class="logo"><a href="https://uxuicurriculum.wixsite.com/gulproast"><img src="./media/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
-        <li><a href="./index.html"><span aria-hidden="true" class="fa-solid fa-mug-saucer"></span> About</a></li>
-        <li><a href="./products.html"><span aria-hidden="true" class="fa-solid fa-fire-flame-curved"></span> Products</a></li>
-        <li><a href="./Contact us.html"><span aria-hidden="true" class="fa-solid fa-phone"></span> Contact</a></li>
+        <li><a href="./index.html"><i class="fa-solid fa-mug-saucer"></i> About</a></li>
+        <li><a href="./products.html"><i class="fa-solid fa-fire-flame-curved"></i> Products</a></li>
+        <li><a href="./Contact.html"><i class="fa-solid fa-phone"></i> Contact</a></li>
       </ul>
     </nav>
   </header>
