--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li class="logo"><a href="https://uxuicurriculum.wixsite.com/gulproast"><img src="./media/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
         <li><a href="./index.html"><i class="fa-solid fa-mug-saucer"></i> About</a></li>
         <li><a href="./products.html"><i class="fa-solid fa-fire-flame-curved"></i> Products</a></li>
-        <li><a href="./Contact us.html"><i class="fa-solid fa-phone"></i> Contact</a></li>
+        <li><a href="./Contact.html"><i class="fa-solid fa-phone"></i> Contact</a></li>
       </ul>
     </nav>
   </header>
